grav: refs, about models, spellcheck

--- a/myblog/posts/sr/gravitacija/biblio.bib
+++ b/myblog/posts/sr/gravitacija/biblio.bib
@@ -8,3 +8,77 @@
 	note = {Page Version ID: 1185162983},
 	langid = {en}
 }
+
+@book{kokko2007,
+	title = {Modelling for Field Biologists and Other Interesting People},
+	author = {Kokko, Hanna},
+	year = {2007},
+	month = {07},
+	date = {2007-07-16},
+	publisher = {Cambridge University Press},
+	edition = {Illustrated edition},
+	address = {Cambridge},
+	langid = {English}
+}
+
+@misc{ptolemai2023,
+	title = {Ptolemaic system | Definition & Facts | Britannica},
+	year = {2023},
+	month = {11},
+	date = {2023-11-28},
+	url = {https://www.britannica.com/science/Ptolemaic-system},
+	langid = {en}
+}
+
+@misc{scholz2022,
+	title = {Prediction can be safely used as a proxy for explanation in causally consistent Bayesian generalized linear models},
+	author = {Scholz, Maximilian and {Bürkner}, Paul-Christian},
+	year = {2022},
+	month = {10},
+	date = {2022-10-13},
+	url = {https://arxiv.org/abs/2210.06927v3},
+	langid = {en}
+}
+
+@article{hernán2018,
+	title = {The C-Word: Scientific Euphemisms Do Not Improve Causal Inference From Observational Data},
+	author = {{Hernán}, Miguel A.},
+	year = {2018},
+	month = {05},
+	date = {2018-05},
+	journal = {American Journal of Public Health},
+	pages = {616--619},
+	volume = {108},
+	number = {5},
+	doi = {10.2105/AJPH.2018.304337},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5888052/},
+	note = {PMID: 29565659
+PMCID: PMC5888052}
+}
+
+@article{vanhelden1984,
+	title = {Saturn through the telescope-A brief historical survey},
+	author = {van Helden, ALBERT},
+	year = {1984},
+	date = {1984},
+	journal = {Saturn},
+	pages = {23{\textendash}43}
+}
+
+@misc{n.grubor2023,
+	title = {Kauzalno zaklju{\v{c}}ivanje je mogu{\'{c}}e iz opservacionih studija},
+	author = {N. Grubor, Nikola},
+	year = {2023},
+	month = {08},
+	date = {2023-08-07},
+	url = {https://nikola-grubor.github.io/myblog/posts/sr/kauzalno-zakljucivanje}
+}
+
+@misc{n.grubor2023a,
+	title = {Klini{\v{c}}ki rezon je kocka},
+	author = {N. Grubor, Nikola},
+	year = {2023},
+	month = {08},
+	date = {2023-08-21},
+	url = {https://nikola-grubor.github.io/myblog/posts/sr/med-dg}
+}
