--- a/myblog/posts/sr/gravitacija/index.qmd
+++ b/myblog/posts/sr/gravitacija/index.qmd
@@ -3,6 +3,8 @@ title: "Priče iza Podataka: Otkrivanje Gravitacije"
 description: "Jedini test razumevanja fenomena je da li možemo da predividimo ishod naše intervencije. Ptolomejevim geocentričnim modelom Solarnog sistema nikad ne bismo mogli da sletimo na mesec, ali Keplerovim modelom --- da. Možemo li osnovnoškolskim znanjem da smislimo eksperiment i otkrijemo lokalno gravitaciono ubrzanje u Beogradu?"
 date: 2023-12-02
 date-format: D/MM/YYYY
+number-sections: true
+number-depth: 2
 lang: hr
 language: language-sr-Latn.yml
 citation:
@@ -60,7 +62,7 @@ d <- d %>%
 
 Na prvi pogled zakoni fizike deluju kao da su pali sa neba. Barem su meni uvek tako delovali. Formule i njihove posledice deluju kao da su izvedene iz nekih aksioma. Gde aksiomi treba da predstavljaju apsolutnu istinu. Gravitacija je neizbežna posledica Njutnovog zakona gravitacije, i ma koliko mi zeleli da skočimo u vis i vinemo se u daljine, to jednostavno nije moguće. Međutim, početna tačka fizike nisu aksiomi (apsolutne istine), već postulati. Već po imenu vidimo da oni ne nose istu težinu kao aksiomi. Postulat vodi svoj koren od latinskog *postulare* što bi u bukvalnom prevodu značilo *upit*. Postulati pretpostavljaju postojanje nečega, ne tvrde apsolutno kao aksiomi. Zbog čega postoji ova razlika?
 
-Uz kreativnost i upornost, naučnici (ili prirodni filozofi kao što su se nekad zvali) su uspeli da opišu ponašanje prirode matematičkim formulama. Svi ovi opisi su u stvari posledice opservacija. Kako sve opservacije potiču iz empirije (iskustva), podložne su određenoj distorziji (iskrivljenju) realnosti --- konkretno kao posledica merenja.[^1] Kada je Galileo upotrebio prvi teleskop i ugledao saturnove prstenove, video je mutnu brljotinu, poput kratkovidog čoveka bez naočara (@fig-saturn). Ta iskrivljena slika realnosti se javlja ma koliko precizan instrument koristili. Čovek je kao zlatna ribica u akvarijumu, osuđen da gleda iskrivljenu sliku sveta (@fig-fish).
+Uz kreativnost i upornost, naučnici (ili prirodni filozofi kao što su se nekad zvali) su uspeli da opišu ponašanje prirode matematičkim formulama. Svi ovi opisi su u stvari posledice opservacija. Kako sve opservacije potiču iz empirije (iskustva), podložne su određenoj distorziji (iskrivljenju) realnosti --- konkretno kao posledica merenja.[^1] Kada je Galileo upotrebio prvi teleskop i ugledao Saturnove prstenove, video je mutnu brljotinu, poput kratkovidog čoveka bez naočara (@fig-saturn) [@vanhelden1984]. Ta iskrivljena slika realnosti se javlja ma koliko precizan instrument koristili. Čovek je kao zlatna ribica u akvarijumu, osuđen da gleda izmenjenu sliku sveta (@fig-fish).
 
 [^1]: Možda deluje da kao da tvrdim da su opservacije nekako inferiorni oblik saznanja. Naprotiv, eksperimenti i opservacije su preko potrebni ljudskom saznanju. Čovekov mozak ume veoma lako da se prevari --- da umisli veze tamo gde one ne postoje. Eksperimenti nam omogućavaju da proverimo naše teorije. I često, ako se rezultati ne poklapaju, možemo da unapredimo naše ideje.
 
@@ -76,15 +78,15 @@ Analogije modela sveta
 
 > Svaki model je pogrešan, ali neki su korisni. --- George Box
 
-Formalna definicija modela...
+Modeli su idealizovane reprezentacije pravog sveta. Korisni su upravo zato što su pojednostavljeni. Svaka simulacija koncentracija lekova u plazmi uključuje u model velike telesne kompartmane (plazmu, masno tkivo, itd.) kao i činjenicu da sve oralno unete supstance prvo prolaze kroz jetru. Takav model je koristan i bez dodatnog komplikovanja činjenicom da su svi ti procesi pod kontrolom DNK i posledično, velike količine gena. Naravno, onog momenta kada otkrijemo da neka genetska varijanta čini pacijenta osetljivim na lek, postaje korisno uključiti je u model [@kokko2007]. Modeli ne ispituju prirodu već naše razmišljanje. Prirodu ispituju eksperimenti. Ponekad možemo iskoristiti i opservacije ako nam je razmišljanje dobro kako bi zaključili nešto o realnosti [@n.grubor2023]. Modeli ja alatke koji koristimo kao pomoć pri odgovaranju na naučna pitanja.
 
 ## Ptolomej i geocentrični svet
 
-Klaudije Ptolomej je bio Helenistički astronom i polimat. Njegovo dostignuće je formalizacija geocentričnog modela kretanja planeta tokom 2. veka nove ere. Ptolomejev sistem orbita planeta zahtevao je neke neobične premise, poput kružnih orbita na još kruznih orbita. Takođe, planeta Zemlja nije mogla biti tačno u centru, već malo izmeštena. Uprkos ovim čudnim pretpostavkama, ovaj model je davao precizna predviđanja kretanja planeta za tada dostupne metode posmatranja. Ptolomejev model Solarnog sistema će biti dominantan sledećih 1000 godina.
+Klaudije Ptolomej je bio Helenistički astronom i polimat. Njegovo dostignuće je formalizacija geocentričnog modela kretanja planeta tokom 2. veka nove ere. Ptolomejev sistem orbita planeta zahtevao je neke neobične premise, poput kružnih orbita na još kruznih orbita. Takođe, planeta Zemlja nije mogla biti tačno u centru, već malo izmeštena. Uprkos ovim čudnim pretpostavkama, ovaj model je davao precizna predviđanja kretanja planeta za tada dostupne metode posmatranja. Ptolomejev model Solarnog sistema će biti dominantan sledećih 1000 godina [@ptolemai2023].
 
 ![Epiciklusi Ptolomejevog modela](geocenter.png){width="50%"}
 
-Međutim, predviđanja nisu sve. U eri mašinskog učenja, gde smo u stanju da napravimo modele koji predviđaju jako dobro ali nemaju nikakvu eksplanatornu vrednost, ova stavka je bitnija nego ikad. Ptolomejev model, i ako dobar u predviđanju, ne bi mogao da nam pomogne da sletimo na mesec (ili pošaljemo istraživačku letelicu na Mars) jer ne predstavlja realnost.[^2]
+Međutim, predviđanja nisu sve. U eri mašinskog učenja, gde smo u stanju da napravimo modele koji predviđaju jako dobro ali nemaju nikakvu eksplanatornu vrednost, ova stavka je bitnija nego ikad [@hernán2018; @scholz2022]. Ptolomejev model, i ako dobar u predviđanju, ne bi mogao da nam pomogne da sletimo na mesec (ili pošaljemo istraživačku letelicu na Mars) jer ne predstavlja realnost.[^2]
 
 [^2]: U industriji je često predikcija cilj sam po sebi (npr. koji tip osobe će kliknuti na reklamu koja mu je servirana). Međutim, istraživači bi trebalo da teže nekom razumevanju sveta. Tu je onda cilj objašnjenje koju pružaju kauzalni modeli. Kada imamo kauzalni model, onda možemo da planiramo intervencije, tj. šta će se desiti ako utičemo na sistem. Oba cilja su korisna, sve zavisi od konteksta.
 
@@ -120,7 +122,7 @@ $$ Kako bismo otkrili kakvo je gravitaciono ubrzanje možemo odraditi eksperimen
 
 $$
 t_i = \sqrt\frac{2h_k}{g}, \; \text{za i-to bacanje loptice, i k-tu visinu.}
-$$ 
+$$
 
 Sada možemo prikupiti podatke.
 
@@ -165,19 +167,30 @@ Merenja nisu najkvalitetnija. Plato koji se javlja za najviše visine je verovat
 Neću ovde ulaziti u razlike između fekventističkih i Bajesovskih modela. Sve što nam je potrebno da bi nastavili dalje je da definišemo apriornu raspodelu gravitacionog ubrzanja $g$ za Beograd. Bajesov pristup ocenjivanja parametara zahteva od nas da jasno kažemo kakve vrednosti su moguće za $g$.
 
 <!-- $$ -->
+
 <!-- t_i = \sqrt\frac{2h_k}{g} -->
+
 <!-- $$ $$ -->
+
 <!-- g \sim Normal(10, 3) -->
+
 <!-- $$ $$ -->
+
 <!-- \sigma \sim Exponential(1) -->
+
 <!-- $$  -->
+
 <!-- $$ -->
+
 <!-- \gamma \sim Exponential(1) -->
+
 <!-- $$ -->
 
 ## Apriorna raspodela gravitacionog ubrzanja
 
-Biranje apriorne raspodele je naučno-istraživačko pitanje i zavisi od ekspertize, tj. poznavanja domena. U ovom slučaju, naše pretpostavke o brzini kojom stvari padaju dolaze iz iskustva --- gledali smo mnogo stvari kako padaju. Deluje mi da stvari nece ubrzavati više od 20 m/s (72 km/h) svake sekunde, a znam da verovatno gravitaciono ubrzanje nije blizu 0. Sasvim sigurno je da negativni brojevi nisu mogući. Zbog toga biram normalnu distribuciju centriranu na 10. Apriorna raspodela mogućih vrednosti za $g$ je prikazana na [@fig-prior].
+Biranje apriorne raspodele je naučno-istraživačko pitanje i zavisi od ekspertize, tj. poznavanja domena koji se ispituje.[^4] U ovom slučaju, naše pretpostavke o brzini kojom stvari padaju dolaze iz iskustva --- gledali smo mnogo stvari kako padaju. Deluje mi da stvari nece ubrzavati više od 20 m/s (72 km/h) svake sekunde, a znam da verovatno gravitaciono ubrzanje nije blizu 0. Sasvim sigurno je da negativni brojevi nisu mogući. Zbog toga biram normalnu distribuciju centriranu na 10. Apriorna raspodela mogućih vrednosti za $g$ je prikazana na [@fig-prior].
+
+[^4]: Apriorna raspodela i njena uloga u medicinskom zaključivanju su detaljnije opisani u @n.grubor2023a.
 
 ```{r}
 #| label: fig-prior
@@ -275,7 +288,7 @@ m2.1 <- brm(
 
 ## Rezultati
 
-Iskreno, nisam očekivao da ću sa samo 51 opservacijom (i to poprilično traljavim) moći ovako dobro da odredim gravitaciono ubrzanje. Procena parametra $g$ je data u [@tbl-fixedef]. Možemo da uporedimo naš rezultat sa Formulom za Internacionalnu Procenu Gravitacije [@theoreti2023] koja procenjuje vrednost lokalnog gravitacionog ubrzanja $g_{Beograd} = 9.806 \; m/s^2$. Iznenađujuće, rezultat uopšte nije loš!
+Iskreno, nisam očekivao da ću sa samo 51 opservacijom (i to poprilično traljavim) moći ovako dobro da odredim gravitaciono ubrzanje. Procena parametra $g$ je data u [@tbl-fixedef] pod nazivom `g_Intercept`. Možemo da uporediti naš rezultat ($\hat g = 9.808 \; m/s^2$) sa procenom Formule za Internacionalnu Procenu Gravitacije [@theoreti2023] koja procenjuje vrednost lokalnog gravitacionog ubrzanja u Beogradu na $g = 9.806 \; m/s^2$. Iznenađujuće, rezultat uopšte nije loš!
 
 ```{r}
 #| echo: false
@@ -377,35 +390,37 @@ p2 <- m1.1 %>%
 
 Ovo je u suštini bio pregled naučnog pristupa. Saznali smo sta su modeli i koji su njihovi ciljevi. Definisali smo istraživačko pitanje i šta je proces koji generiše podatke. Zatim smo iskoristili znanje o gravitaciji iz osnovne škole kako bi znali kakav eksperiment treba da konstruišemo. Naš eksperiment je napravio mogućnost da se ispolji proces koji generiše podatke. Zatim smo taj proces ispitali kako bi procenili kakvo je lokalno gravitaciono ubrzanje.
 
-::: {.callout-note}
+::: callout-note
 # Rezime
-- Naučni modeli su prozor u funkcionisanje sveta
-- Predviđanje i razumevanje su dva različita cilja
-- Prirodni fenomeni su procesi koji generišu podatke
-- Potrebna nam je teorija pre nego što započnemo ispitivanje
-- Procesi koji generišu podatke kriju informacije o svetu
+
+-   Naučni modeli su prozor u funkcionisanje sveta
+-   Predviđanje i razumevanje su dva različita cilja
+-   Prirodni fenomeni su procesi koji generišu podatke
+-   Potrebna nam je teorija pre nego što započnemo ispitivanje
+-   Procesi koji generišu podatke kriju informacije o svetu
 :::
 
-# Dodatci {.justify}
+# Dodaci {.justify}
 
 ### Dodatak 1: Izvođenje formula gravitacionog ubrzanja {#sec-dodatak1}
 
+Pređeni put $s$ je jednak proizvodu srednje brzine $\bar v$ i vremenu $t$ tokom kog se telo kretalo tom brzinom.
+
 $$
 s = \bar v t
-$$ 
+$$
 
 Srednja brzina $\bar v$, tokom ravnomernog kretanja je jednaka $\frac{\Delta v}{\Delta t}$. Tako da:
 
 $$
 s = \frac{v_0 + v}{2}t
-$$ 
+$$
 
 Ako predstavimo gravitacionu ubrzanje $g$ kao promenu brzine $v$ u jedinici vremena $t$, onda je:
 
 $$
 g = \frac{\Delta v}{\Delta t} 
-$$ 
-Ako je telo krenulo da pada iz mirovanja onda mozemo da zanemarimo $v_0$ u obe jednačine. Takođe, ako nas interesuje $g$ u jediničnom vremenu (tj. trenutku) mozemo da zanemarimo i početno vreme $t_0$. Tako je onda: 
+$$ Ako je telo krenulo da pada iz mirovanja onda mozemo da zanemarimo $v_0$ u obe jednačine. Takođe, ako nas interesuje $g$ u jediničnom vremenu (tj. trenutku) mozemo da zanemarimo i početno vreme $t_0$. Tako je onda:
 
 $$
 s = \frac{\not v_0 + v}{2}t \rightarrow s = \frac{v}{2}t
