--- a/myblog/posts/sr/gravitacija/index.qmd
+++ b/myblog/posts/sr/gravitacija/index.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Priče iza Podataka: Otkrivanje Gravitacije"
-description: "Jedini test razumevanja fenomena je da li možemo da predividimo ishod naše intervencije. Ptolomejevim geocentričnim modelom Solarnog sistema nikad ne bismo mogli da sletimo na mesec, ali Keplerovim modelom --- da. Možemo li osnovnoškolskim znanjem da smislimo eksperiment i otkrijemo lokalno gravitaciono ubrzanje u Beogradu?"
+title: "Priče iza Podataka: Model za Otkrivanje Gravitacije"
+description: "Jedini test razumevanja fenomena je da li možemo da predvidimo ishod naše intervencije. Ptolomejevim geocentričnim modelom Solarnog sistema nikad ne bismo mogli da sletimo na mesec, ali Keplerovim modelom --- da. Možemo li osnovnoškolskim znanjem da smislimo eksperiment i modelom otkrijemo lokalno gravitaciono ubrzanje u Beogradu?"
 date: 2023-12-02
 date-format: D/MM/YYYY
 number-sections: true
@@ -16,7 +16,7 @@ author:
     # affiliation-url: https://www.mfub.bg.ac.rs/
 csl: apa.csl
 bibliography: biblio.bib
-categories: [statistika, srpski]
+categories: [statistika, kauzalnost, srpski]
 image: "geocenter.png"
 mermaid: 
   theme: forest
@@ -60,9 +60,9 @@ d <- d %>%
 
 # Model kao prozor u realnost {.justify}
 
-Na prvi pogled zakoni fizike deluju kao da su pali sa neba. Barem su meni uvek tako delovali. Formule i njihove posledice deluju kao da su izvedene iz nekih aksioma. Gde aksiomi treba da predstavljaju apsolutnu istinu. Gravitacija je neizbežna posledica Njutnovog zakona gravitacije, i ma koliko mi zeleli da skočimo u vis i vinemo se u daljine, to jednostavno nije moguće. Međutim, početna tačka fizike nisu aksiomi (apsolutne istine), već postulati. Već po imenu vidimo da oni ne nose istu težinu kao aksiomi. Postulat vodi svoj koren od latinskog *postulare* što bi u bukvalnom prevodu značilo *upit*. Postulati pretpostavljaju postojanje nečega, ne tvrde apsolutno kao aksiomi. Zbog čega postoji ova razlika?
+Na prvi pogled zakoni fizike deluju kao da su pali sa neba. Barem su meni uvek tako delovali. Formule i njihove posledice deluju kao da su izvedene iz nekih aksioma. Gde aksiomi treba da predstavljaju apsolutnu istinu. Gravitacija je neizbežna posledica Njutnovog zakona gravitacije, i ma koliko mi želeli da skočimo u vis i vinemo se u daljine, to jednostavno nije moguće. Međutim, početna tačka fizike nisu aksiomi (apsolutne istine), već postulati. Već po imenu vidimo da oni ne nose istu težinu kao aksiomi. Postulat vodi svoj koren od latinskog *postulare* što bi u bukvalnom prevodu značilo *upit*. Postulati pretpostavljaju postojanje nečega, ne tvrde apsolutno kao aksiomi. Zbog čega postoji ova razlika u disciplinama?
 
-Uz kreativnost i upornost, naučnici (ili prirodni filozofi kao što su se nekad zvali) su uspeli da opišu ponašanje prirode matematičkim formulama. Svi ovi opisi su u stvari posledice opservacija. Kako sve opservacije potiču iz empirije (iskustva), podložne su određenoj distorziji (iskrivljenju) realnosti --- konkretno kao posledica merenja.[^1] Kada je Galileo upotrebio prvi teleskop i ugledao Saturnove prstenove, video je mutnu brljotinu, poput kratkovidog čoveka bez naočara (@fig-saturn) [@vanhelden1984]. Ta iskrivljena slika realnosti se javlja ma koliko precizan instrument koristili. Čovek je kao zlatna ribica u akvarijumu, osuđen da gleda izmenjenu sliku sveta (@fig-fish).
+Uz kreativnost i upornost, naučnici (ili prirodni filozofi kao što su se nekad zvali) su uspeli da opišu ponašanje prirode matematičkim formulama. Svi ovi opisi su u stvari posledice opservacija. Kako sve opservacije potiču iz empirije (iskustva), podložne su određenoj distorziji (iskrivljenju) realnosti --- konkretno kao posledica merenja.[^1] Kada je Galileo upotrebio prvi teleskop i ugledao Saturnove prstenove, video je mutnu brljotinu, poput kratkovidog čoveka bez naočara, i pomislio da Saturn ima dva meseca u svojoj orbiti (@fig-saturn) [@vanhelden1984]. Ta iskrivljena slika realnosti je uslovljena mernim aparatima i javlja se ma koliko precizan instrument koristili. Čovekova pozicija u svetu je poput zlatne ribice u akvarijumu, osuđene da gleda izmenjenu sliku sveta (@fig-fish).
 
 [^1]: Možda deluje da kao da tvrdim da su opservacije nekako inferiorni oblik saznanja. Naprotiv, eksperimenti i opservacije su preko potrebni ljudskom saznanju. Čovekov mozak ume veoma lako da se prevari --- da umisli veze tamo gde one ne postoje. Eksperimenti nam omogućavaju da proverimo naše teorije. I često, ako se rezultati ne poklapaju, možemo da unapredimo naše ideje.
 
@@ -78,17 +78,15 @@ Analogije modela sveta
 
 > Svaki model je pogrešan, ali neki su korisni. --- George Box
 
-Modeli su idealizovane reprezentacije pravog sveta. Korisni su upravo zato što su pojednostavljeni. Svaka simulacija koncentracija lekova u plazmi uključuje u model velike telesne kompartmane (plazmu, masno tkivo, itd.) kao i činjenicu da sve oralno unete supstance prvo prolaze kroz jetru. Takav model je koristan i bez dodatnog komplikovanja činjenicom da su svi ti procesi pod kontrolom DNK i posledično, velike količine gena. Naravno, onog momenta kada otkrijemo da neka genetska varijanta čini pacijenta osetljivim na lek, postaje korisno uključiti je u model [@kokko2007]. Modeli ne ispituju prirodu već naše razmišljanje. Prirodu ispituju eksperimenti. Ponekad možemo iskoristiti i opservacije ako nam je razmišljanje dobro kako bi zaključili nešto o realnosti [@n.grubor2023]. Modeli ja alatke koji koristimo kao pomoć pri odgovaranju na naučna pitanja.
+Modeli su idealizovane reprezentacije pravog sveta. Korisni su upravo zato što su pojednostavljeni. U farmakologiji, svaka simulacija koncentracija lekova u plazmi uključuje u model velike telesne kompartmane (plazmu, masno tkivo, itd.) kao i činjenicu da sve oralno unete supstance prvo prolaze kroz jetru. Takav model je koristan i bez dodatnog komplikovanja činjenicom da su svi ti procesi pod kontrolom DNK i posledično, velike količine gena. Naravno, onog momenta kada otkrijemo da neka genetska varijanta čini pacijenta osetljivim na lek, postaje korisno uključiti ga u model [@kokko2007]. Modeli ne ispituju prirodu već naše razmišljanje. Prirodu ispituju eksperimenti. Možemo iskoristiti i opservacije, ako nam je razmišljanje o svetu ispravno, kako bi zaključili nešto o realnosti [@n.grubor2023]. Modeli su alatke koje koristimo kao pomoć pri traženju odgovora na naučna pitanja.
 
 ## Ptolomej i geocentrični svet
 
-Klaudije Ptolomej je bio Helenistički astronom i polimat. Njegovo dostignuće je formalizacija geocentričnog modela kretanja planeta tokom 2. veka nove ere. Ptolomejev sistem orbita planeta zahtevao je neke neobične premise, poput kružnih orbita na još kruznih orbita. Takođe, planeta Zemlja nije mogla biti tačno u centru, već malo izmeštena. Uprkos ovim čudnim pretpostavkama, ovaj model je davao precizna predviđanja kretanja planeta za tada dostupne metode posmatranja. Ptolomejev model Solarnog sistema će biti dominantan sledećih 1000 godina [@ptolemai2023].
+Klaudije Ptolomej je bio Helenistički astronom i učenjak. Njegovo dostignuće je formalizacija geocentričnog modela kretanja planeta tokom 2. veka nove ere. Ptolomejev sistem orbita planeta zahtevao je neke neobične premise, poput kružnih orbita na još kružnih orbita. Takođe, planeta Zemlja nije mogla biti tačno u centru, već malo izmeštena. Uprkos ovim čudnim pretpostavkama, ovaj model je davao precizna predviđanja kretanja planeta za tada dostupne metode posmatranja. Ptolomejev model Solarnog sistema će biti dominantan sledećih 1000 godina [@ptolemai2023]. Ovakav model kretanja planeta je naravno pogrešan. On predviđa ne gde se planete stvarno nalaze u Solarnom sistemu, već gde se one "prividno" nalaze kada ih posmatrač sa Zemlje traži na nebu. Modeli mogu davati jako dobra predviđanja[^2] ali u korenu biti katastrofalno *mehanistično* pogrešni. Kako model ne predstavlja mehanizam sistema, ne možemo pouzdano intervenisati da ga izmenimo. Ptolomejev model Solarnog sistema je potreban kada se dizajniraju planetarijumi, ali ne i kada planiramo svemirske misije. U eri mašinskog učenja, gde smo u stanju da napravimo modele koji predviđaju jako dobro ali nemaju nikakvu eksplanatornu vrednost, ova stavka je bitnija nego ikad [@hernán2018; @scholz2022].
 
-![Epiciklusi Ptolomejevog modela](geocenter.png){width="50%"}
+![Epiciklusi Ptolomejevog geocentričnog modela.](geocenter.png){width="50%"}
 
-Međutim, predviđanja nisu sve. U eri mašinskog učenja, gde smo u stanju da napravimo modele koji predviđaju jako dobro ali nemaju nikakvu eksplanatornu vrednost, ova stavka je bitnija nego ikad [@hernán2018; @scholz2022]. Ptolomejev model, i ako dobar u predviđanju, ne bi mogao da nam pomogne da sletimo na mesec (ili pošaljemo istraživačku letelicu na Mars) jer ne predstavlja realnost.[^2]
-
-[^2]: U industriji je često predikcija cilj sam po sebi (npr. koji tip osobe će kliknuti na reklamu koja mu je servirana). Međutim, istraživači bi trebalo da teže nekom razumevanju sveta. Tu je onda cilj objašnjenje koju pružaju kauzalni modeli. Kada imamo kauzalni model, onda možemo da planiramo intervencije, tj. šta će se desiti ako utičemo na sistem. Oba cilja su korisna, sve zavisi od konteksta.
+[^2]: U industriji je često predikcija cilj sam po sebi (npr. koji tip osobe će kliknuti na reklamu koja mu je servirana). Međutim, istraživači bi trebalo da teže nekom razumevanju sveta. Kada imamo kauzalni model, onda možemo da planiramo intervencije, tj. šta će se desiti ako utičemo na sistem. Oba cilja su korisna, sve zavisi od konteksta.
 
 # Primer: Gravitaciono ubrzanje u Beogradu {.justify}
 
@@ -96,7 +94,7 @@ Međutim, predviđanja nisu sve. U eri mašinskog učenja, gde smo u stanju da n
 
 Stvari koje imaju masu utiču na okolinu preko gravitacionog polja. Što je veća masa to je jača sila privlačenja koja deluje između dva tela. Kako naša planeta nije savršena sfera, privlačna sila neće svuda na Zemlji biti ista. Odradićemo mali eksperiment da pokušamo da je odredimo.[^3]
 
-[^3]: Sumnjam da ćemo imati dovoljno podataka da precizno odredimo lokalnu gravitacionu konstatnu, ali barem možemo da otkrijemo koliko precizni možemo da budemo.
+[^3]: Sumnjam da ćemo imati dovoljno podataka da precizno odredimo lokalnu gravitacionu kanstantu, ali barem možemo da otkrijemo koliko precizni možemo da budemo.
 
 ### Ideja eksperimenta
 
@@ -128,7 +126,7 @@ Sada možemo prikupiti podatke.
 
 ## Otkrivanje gravitacionog ubrzanja
 
-U nadi da ce se u mojim podacima pronaći informacija o gravitacionom ubrzanju, napravio sam 51 opservaciju vremena potrebnog za slobodan pad sa 4 različite visine. Rezultujući podaci su dati u @tbl-data. Nelinaran odnos je grafički prikazan na [@fig-datagraph]
+U nadi da će se u mojim podacima pronaći informacija o gravitacionom ubrzanju, napravio sam 51 opservaciju vremena potrebnog za slobodan pad sa 4 različite visine. Rezultujući podaci su dati u @tbl-data. Nelinearan odnos je grafički prikazan na [@fig-datagraph]
 
 ```{r}
 #| label: tbl-data
@@ -160,7 +158,7 @@ d %>% ggplot(aes(x = height, y = time,
   theme_cowplot()
 ```
 
-Merenja nisu najkvalitetnija. Plato koji se javlja za najviše visine je verovatno artefakt neke vrste (greške u merenju usled uticaja refleksa, uticaj otpora vazduha, tehnika ispuštanja loptice, itd.). Nastavićemo primer sa ovim podacima, možda se iznenadimo rezultatom.
+Merenja nisu najkvalitetnija. Plato koji se javlja za najviše visine je verovatno artefakt neke vrste (greške u merenju usled uticaja refleksa, otpora vazduha, tehnike ispuštanja loptice, itd.). Nastavićemo primer sa ovim podacima, možda se iznenadimo rezultatom.
 
 ## Bajesov model gravitacionog ubrzanja
 
@@ -188,7 +186,7 @@ Neću ovde ulaziti u razlike između fekventističkih i Bajesovskih modela. Sve 
 
 ## Apriorna raspodela gravitacionog ubrzanja
 
-Biranje apriorne raspodele je naučno-istraživačko pitanje i zavisi od ekspertize, tj. poznavanja domena koji se ispituje.[^4] U ovom slučaju, naše pretpostavke o brzini kojom stvari padaju dolaze iz iskustva --- gledali smo mnogo stvari kako padaju. Deluje mi da stvari nece ubrzavati više od 20 m/s (72 km/h) svake sekunde, a znam da verovatno gravitaciono ubrzanje nije blizu 0. Sasvim sigurno je da negativni brojevi nisu mogući. Zbog toga biram normalnu distribuciju centriranu na 10. Apriorna raspodela mogućih vrednosti za $g$ je prikazana na [@fig-prior].
+Biranje apriorne raspodele je naučno-istraživačko pitanje i zavisi od ekspertize, tj. poznavanja domena koji se ispituje.[^4] U ovom slučaju, naše pretpostavke o brzini kojom stvari padaju dolaze iz iskustva --- gledali smo mnogo stvari kako padaju. Deluje mi da stvari neće ubrzavati više od 20 m/s (72 km/h) svake sekunde, a znam da verovatno gravitaciono ubrzanje nije blizu 0. Sasvim sigurno je da negativni brojevi nisu mogući. Zbog toga biram normalnu distribuciju centriranu na 10. Apriorna raspodela mogućih vrednosti za $g$ je prikazana na [@fig-prior].
 
 [^4]: Apriorna raspodela i njena uloga u medicinskom zaključivanju su detaljnije opisani u @n.grubor2023a.
 
@@ -288,7 +286,7 @@ m2.1 <- brm(
 
 ## Rezultati
 
-Iskreno, nisam očekivao da ću sa samo 51 opservacijom (i to poprilično traljavim) moći ovako dobro da odredim gravitaciono ubrzanje. Procena parametra $g$ je data u [@tbl-fixedef] pod nazivom `g_Intercept`. Možemo da uporediti naš rezultat ($\hat g = 9.808 \; m/s^2$) sa procenom Formule za Internacionalnu Procenu Gravitacije [@theoreti2023] koja procenjuje vrednost lokalnog gravitacionog ubrzanja u Beogradu na $g = 9.806 \; m/s^2$. Iznenađujuće, rezultat uopšte nije loš!
+Iskreno, nisam očekivao da ćemo sa samo 51 opservacijom (i to poprilično traljavim) moći ovako precizno da odredimo gravitaciono ubrzanje. Procena parametra $g$ je data u [@tbl-fixedef] pod nazivom `g_Intercept`. Možemo uporediti naš rezultat ($\hat g = 9.808 \; m/s^2$) sa procenom Formule za Internacionalnu Procenu Gravitacije [@theoreti2023] koja nam daje vrednost lokalnog gravitacionog ubrzanja u Beogradu od $g = 9.806 \; m/s^2$. Iznenađujuće, rezultat uopšte nije mnogo drugačiji od ovog!
 
 ```{r}
 #| echo: false
@@ -299,7 +297,7 @@ Iskreno, nisam očekivao da ću sa samo 51 opservacijom (i to poprilično tralja
 fixef(m1.1) %>% knitr::kable()
 ```
 
-Posteriorna distribucija je prikazana grafički na [@fig-update]. Parametar je dosta nesiguran (širina aposteriorne distribucije) ali je većina verovatnoće koncentrisana oko tačne vrednosti. Kada je model video podatke dodelio je parametaru $g$ vrednosti koje su konzistentne sa podacima iz našeg malog eksperimenta.
+Posteriorna distribucija je prikazana grafički na [@fig-update]. Parametar je dosta nesiguran (širina aposteriorne distribucije) ali je većina verovatnoće koncentrisana oko najverovatnije vrednosti. Kada je model video podatke dodelio je parametru $g$ vrednosti koje su konzistentne sa podacima iz našeg eksperimenta.
 
 ```{r}
 #| label: fig-update
@@ -388,7 +386,7 @@ p2 <- m1.1 %>%
 
 # Zaključak {.justify}
 
-Ovo je u suštini bio pregled naučnog pristupa. Saznali smo sta su modeli i koji su njihovi ciljevi. Definisali smo istraživačko pitanje i šta je proces koji generiše podatke. Zatim smo iskoristili znanje o gravitaciji iz osnovne škole kako bi znali kakav eksperiment treba da konstruišemo. Naš eksperiment je napravio mogućnost da se ispolji proces koji generiše podatke. Zatim smo taj proces ispitali kako bi procenili kakvo je lokalno gravitaciono ubrzanje.
+Ovo je u suštini bio pregled naučnog pristupa. Saznali smo šta su modeli i koji su njihovi ciljevi. Definisali smo istraživačko pitanje i šta je proces koji generiše podatke. Zatim smo iskoristili znanje o gravitaciji iz osnovne škole kako bi znali kakav eksperiment treba da konstruišemo. Naš eksperiment je napravio mogućnost da se ispolji proces koji generiše podatke. Zatim smo taj proces ispitali kako bi procenili kakvo je lokalno gravitaciono ubrzanje.
 
 ::: callout-note
 # Rezime
