grav: fixed citations

--- a/myblog/posts/sr/gravitacija/biblio.bib
+++ b/myblog/posts/sr/gravitacija/biblio.bib
@@ -82,3 +82,12 @@ PMCID: PMC5888052}
 	date = {2023-08-21},
 	url = {https://nikola-grubor.github.io/myblog/posts/sr/med-dg}
 }
+
+@misc{betancourt2019,
+	title = {Probabilistic Modeling and Statistical Inference},
+	author = {Betancourt, Michael},
+	year = {2019},
+	month = {03},
+	date = {2019-03},
+	url = {https://betanalpha.github.io/assets/case_studies/modeling_and_inference.html}
+}
