--- a/myblog/posts/sr/gravitacija/index.qmd
+++ b/myblog/posts/sr/gravitacija/index.qmd
@@ -84,17 +84,19 @@ Modeli su idealizovane reprezentacije pravog sveta. Korisni su upravo zato što 
 
 Klaudije Ptolomej je bio Helenistički astronom i učenjak. Njegovo dostignuće je formalizacija geocentričnog modela kretanja planeta tokom 2. veka nove ere. Ptolomejev sistem orbita planeta zahtevao je neke neobične premise, poput kružnih orbita na još kružnih orbita. Takođe, planeta Zemlja nije mogla biti tačno u centru, već malo izmeštena. Uprkos ovim čudnim pretpostavkama, ovaj model je davao precizna predviđanja kretanja planeta za tada dostupne metode posmatranja. Ptolomejev model Solarnog sistema će biti dominantan sledećih 1000 godina [@ptolemai2023]. Ovakav model kretanja planeta je naravno pogrešan. On predviđa ne gde se planete stvarno nalaze u Solarnom sistemu, već gde se one "prividno" nalaze kada ih posmatrač sa Zemlje traži na nebu. Modeli mogu davati jako dobra predviđanja[^2] ali u korenu biti katastrofalno *mehanistično* pogrešni. Kako model ne predstavlja mehanizam sistema, ne možemo pouzdano intervenisati da ga izmenimo. Ptolomejev model Solarnog sistema je potreban kada se dizajniraju planetarijumi, ali ne i kada planiramo svemirske misije. U eri mašinskog učenja, gde smo u stanju da napravimo modele koji predviđaju jako dobro ali nemaju nikakvu eksplanatornu vrednost, ova stavka je bitnija nego ikad [@hernán2018; @scholz2022].
 
-![Epiciklusi Ptolomejevog geocentričnog modela.](geocenter.png){width="50%"}
-
 [^2]: U industriji je često predikcija cilj sam po sebi (npr. koji tip osobe će kliknuti na reklamu koja mu je servirana). Međutim, istraživači bi trebalo da teže nekom razumevanju sveta. Kada imamo kauzalni model, onda možemo da planiramo intervencije, tj. šta će se desiti ako utičemo na sistem. Oba cilja su korisna, sve zavisi od konteksta.
+
+![Epiciklusi Ptolomejevog geocentričnog modela.](geocenter.png){width="50%"}
 
 # Primer: Gravitaciono ubrzanje u Beogradu {.justify}
 
 ### Lokalno gravitaciono ubrzanje
 
-Stvari koje imaju masu utiču na okolinu preko gravitacionog polja. Što je veća masa to je jača sila privlačenja koja deluje između dva tela. Kako naša planeta nije savršena sfera, privlačna sila neće svuda na Zemlji biti ista. Odradićemo mali eksperiment da pokušamo da je odredimo.[^3]
+Stvari koje imaju masu utiču na okolinu preko gravitacionog polja. Što je veća masa to je jača sila privlačenja koja deluje između dva tela. Kako naša planeta nije savršena sfera, privlačna sila neće svuda na Zemlji biti ista. Odradićemo mali eksperiment da pokušamo da je odredimo.[^3]^,^[^4]
 
 [^3]: Sumnjam da ćemo imati dovoljno podataka da precizno odredimo lokalnu gravitacionu kanstantu, ali barem možemo da otkrijemo koliko precizni možemo da budemo.
+
+[^4]: Inspiracija za ovaj eksperiment dolazi iz veoma kvalitetnog članka o principijelnom modeliranju od @betancourt2019.
 
 ### Ideja eksperimenta
 
@@ -186,9 +188,9 @@ Neću ovde ulaziti u razlike između fekventističkih i Bajesovskih modela. Sve 
 
 ## Apriorna raspodela gravitacionog ubrzanja
 
-Biranje apriorne raspodele je naučno-istraživačko pitanje i zavisi od ekspertize, tj. poznavanja domena koji se ispituje.[^4] U ovom slučaju, naše pretpostavke o brzini kojom stvari padaju dolaze iz iskustva --- gledali smo mnogo stvari kako padaju. Deluje mi da stvari neće ubrzavati više od 20 m/s (72 km/h) svake sekunde, a znam da verovatno gravitaciono ubrzanje nije blizu 0. Sasvim sigurno je da negativni brojevi nisu mogući. Zbog toga biram normalnu distribuciju centriranu na 10. Apriorna raspodela mogućih vrednosti za $g$ je prikazana na [@fig-prior].
+Biranje apriorne raspodele je naučno-istraživačko pitanje i zavisi od ekspertize, tj. poznavanja domena koji se ispituje.[^5] U ovom slučaju, naše pretpostavke o brzini kojom stvari padaju dolaze iz iskustva --- gledali smo mnogo stvari kako padaju. Deluje mi da stvari neće ubrzavati više od 20 m/s (72 km/h) svake sekunde, a znam da verovatno gravitaciono ubrzanje nije blizu 0. Sasvim sigurno je da negativni brojevi nisu mogući. Zbog toga biram normalnu distribuciju centriranu na 10. Apriorna raspodela mogućih vrednosti za $g$ je prikazana na [@fig-prior].
 
-[^4]: Apriorna raspodela i njena uloga u medicinskom zaključivanju su detaljnije opisani u @n.grubor2023a.
+[^5]: Apriorna raspodela i njena uloga u medicinskom zaključivanju su detaljnije opisani u @n.grubor2023a.
 
 ```{r}
 #| label: fig-prior
