grav: added missing citations; rerender

--- a/myblog/posts/sr/gravitacija/biblio.bib
+++ b/myblog/posts/sr/gravitacija/biblio.bib
@@ -22,7 +22,8 @@
 }
 
 @misc{ptolemai2023,
-	title = {Ptolemaic system | Definition & Facts | Britannica},
+	title = {Ptolemaic system},
+	author = {R. Jones, Alexander},
 	year = {2023},
 	month = {11},
 	date = {2023-11-28},
@@ -90,4 +91,15 @@ PMCID: PMC5888052}
 	month = {03},
 	date = {2019-03},
 	url = {https://betanalpha.github.io/assets/case_studies/modeling_and_inference.html}
+}
+@book{mcelreath2020,
+	title = {Statistical Rethinking: A Bayesian Course with Examples in R and STAN},
+	author = {McElreath, Richard},
+	year = {2020},
+	month = {03},
+	date = {2020-03-16},
+	publisher = {Chapman and Hall/CRC},
+	edition = {2nd edition},
+	address = {Boca Raton London New York},
+	langid = {English}
 }
