--- a/myblog/posts/sr/gravitacija/index.qmd
+++ b/myblog/posts/sr/gravitacija/index.qmd
@@ -82,7 +82,7 @@ Modeli su idealizovane reprezentacije pravog sveta. Korisni su upravo zato što 
 
 ## Ptolomej i geocentrični svet
 
-Klaudije Ptolomej je bio Helenistički astronom i učenjak. Njegovo dostignuće je formalizacija geocentričnog modela kretanja planeta tokom 2. veka nove ere. Ptolomejev sistem orbita planeta zahtevao je neke neobične premise, poput kružnih orbita na još kružnih orbita. Takođe, planeta Zemlja nije mogla biti tačno u centru, već malo izmeštena. Uprkos ovim čudnim pretpostavkama, ovaj model je davao precizna predviđanja kretanja planeta za tada dostupne metode posmatranja. Ptolomejev model Solarnog sistema će biti dominantan sledećih 1000 godina [@ptolemai2023]. Ovakav model kretanja planeta je naravno pogrešan. On predviđa ne gde se planete stvarno nalaze u Solarnom sistemu, već gde se one "prividno" nalaze kada ih posmatrač sa Zemlje traži na nebu. Modeli mogu davati jako dobra predviđanja[^2] ali u korenu biti katastrofalno *mehanistično* pogrešni [@mcelreath2020]. Kako model ne predstavlja mehanizam sistema, ne možemo pouzdano intervenisati da ga izmenimo. Ptolomejev model Solarnog sistema je potreban kada se dizajniraju planetarijumi, ali ne i kada planiramo svemirske misije. U eri mašinskog učenja, gde smo u stanju da napravimo modele koji predviđaju jako dobro ali nemaju nikakvu eksplanatornu vrednost, ova stavka je bitnija nego ikad [@hernán2018; @scholz2022].
+Klaudije Ptolomej je bio Helenistički astronom i učenjak. Njegovo dostignuće je formalizacija geocentričnog modela kretanja planeta tokom 2. veka nove ere. Ptolomejev sistem orbita planeta zahtevao je neke neobične premise, poput kružnih orbita na još kružnih orbita. Takođe, planeta Zemlja nije mogla biti tačno u centru, već malo izmeštena. Uprkos ovim čudnim pretpostavkama, ovaj model je davao precizna predviđanja kretanja planeta za tada dostupne metode posmatranja. Ptolomejev model Solarnog sistema će biti dominantan sledećih 1000 godina [@ptolemai2023]. Ovakav model kretanja planeta je naravno pogrešan. On predviđa ne gde se planete stvarno nalaze u Solarnom sistemu, već gde se one "prividno" nalaze kada ih posmatrač sa Zemlje traži na nebu. Modeli mogu davati jako dobra predviđanja[^2] ali u korenu biti katastrofalno *mehanistično* pogrešni [@mcelreath2020, p. 71]. Kako model ne predstavlja mehanizam sistema, ne možemo pouzdano intervenisati da ga izmenimo. Ptolomejev model Solarnog sistema je potreban kada se dizajniraju planetarijumi, ali ne i kada planiramo svemirske misije. U eri mašinskog učenja, gde smo u stanju da napravimo modele koji predviđaju jako dobro ali nemaju nikakvu eksplanatornu vrednost, ova stavka je bitnija nego ikad [@hernán2018; @scholz2022].
 
 [^2]: U industriji je često predikcija cilj sam po sebi (npr. koji tip osobe će kliknuti na reklamu koja mu je servirana). Međutim, istraživači bi trebalo da teže nekom razumevanju sveta. Kada imamo kauzalni model, onda možemo da planiramo intervencije, tj. šta će se desiti ako utičemo na sistem. Oba cilja su korisna, sve zavisi od konteksta.
 
